--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,23 +5,22 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <4.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+  flutter_quill: ^4.2.3
+  url_launcher: ^6.1.8
   vsc_quill_delta_to_html:
     path: ../
-  flutter_quill: ^7.1.18
-  url_launcher: ^6.1.2
-  webviewx_plus: ^0.3.2
 
 dev_dependencies:
+  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
