--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.0.3
 homepage: https://github.com/VisualSystemsCorp/vsc_quill_delta_to_html
 
 environment:
-  sdk: '>=2.18.6 <4.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  collection: ^1.17.0
   html_unescape: ^2.0.0
-  collection: ^1.16.0
-  meta: ^1.8.0
+  meta: ^1.9.1
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^1.0.1
   test: ^1.16.0
