--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  collection: ^1.17.0
+  collection:
   html_unescape: ^2.0.0
-  meta: ^1.9.1
+  meta: ^1.7.0
 
 dev_dependencies:
   lints: ^1.0.1
