--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   url_launcher: ^6.1.8
   vsc_quill_delta_to_html:
     path: ../
+  webviewx: ^0.2.2
 
 dev_dependencies:
   flutter_lints: ^1.0.4
